feat: tex in progress

--- a/lecture-exercise-3/main.tex
+++ b/lecture-exercise-3/main.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 
 \title{Roadmap to the Future in IT}
-\author{Mikołaj Kubś}
+\author{Miko\l{}aj Kub\'s}
 \date{\today}
 
 \begin{document}
@@ -9,12 +9,64 @@
 \maketitle
 
 \section{Introduction}
-This is the introduction section.
+This document outlines global IT trends for the coming years and a personalized roadmap to align skills and career goals with emerging opportunities in the field.
 
-\section{Main Content}
-This is the main content section.
+\section{Global Trends in IT}
+The IT industry is evolving rapidly, driven by technological innovation which shows no signs of slowing down, but seems to press the acceleration pedal more and more. Below are key trends anticipated over the next five years:
+
+\subsection{Artificial Intelligence and Machine Learning}
+\begin{itemize}
+    \item \textbf{Generative AI:} The rise of tools like GPT and their application in creative industries. LLM's will stand the test of time, whether they can become AGI/ASI (both highly likely in my opinion) or not. But now that the opportunity seems to be in a hand's reach, every tech company is trying to rush to develop a machine smarter than a human. An AI general enough to specialize in many environments/technologies etc. would bring unimaginable profits to the company that develops it first.
+    \item \textbf{AI ethics:} Enhancing transparency in AI models. In case of mass unemployment resulting from smarter than human machines, some anti-AI laws or movements may start to exist. Possible UBI (Universal Basic Income) implementations.
+    \item \textbf{AI in Gaming:} Procedural content generation and dynamic NPC behavior. Easier creation of meshes and sprites. Artwork with
+\end{itemize}
+
+\subsection{Cloud Computing and DevOps}
+\begin{itemize}
+    \item \textbf{Serverless Architectures:} Building scalable applications with reduced overhead.
+    \item \textbf{Kubernetes and Containerization:} Streamlining deployment and operations.
+    \item \textbf{Event-Driven Architectures:} Improving real-time processing.
+\end{itemize}
+
+\subsection{Game Development Trends}
+\begin{itemize}
+    \item \textbf{AR/VR and XR:} Expanding immersive gaming experiences.
+    \item \textbf{AI-Driven Game Mechanics:} Smarter NPCs and adaptive gameplay.
+    \item \textbf{Blockchain in Games:} Integrating NFTs and decentralized assets.
+\end{itemize}
+
+\subsection{Cybersecurity}
+\begin{itemize}
+    \item \textbf{AI Security:} Protecting against adversarial attacks on AI models.
+    \item \textbf{Zero Trust Architectures:} Enhancing security in distributed systems.
+    \item \textbf{API Security:} Addressing vulnerabilities in backend systems.
+\end{itemize}
+
+\section{Personal Roadmap}
+Based on these trends, the following is a tailored plan for professional development:
+
+\subsection{Year 2025}
+\begin{itemize}
+    \item \textbf{AI in Game Development:} Apply NEAT or ML algorithms to create dynamic NPCs in Unity.
+    \item \textbf{Backend Skills:} Master Django and learn FastAPI for high-performance web applications.
+    \item \textbf{Financial Planning:} Continue investments via XTB to secure a mortgage down payment.
+\end{itemize}
+
+\subsection{Next 3 Years (2025--2028)}
+\begin{itemize}
+    \item \textbf{Cloud and DevOps:} Gain proficiency in AWS, Docker, and Kubernetes.
+    \item \textbf{Game Projects:} Develop a game featuring procedural content generation.
+    \item \textbf{Certifications:} Earn AWS Certified Developer and Unity Certified Programmer credentials.
+\end{itemize}
+
+\subsection{Next 5 Years (2025--2030)}
+\begin{itemize}
+    \item \textbf{Specialization:} Aim to become a Lead AI Developer in Game Development or a Senior Backend Engineer.
+    \item \textbf{New Technologies:} Explore AR/VR development for immersive experiences.
+    \item \textbf{Networking and Education:} Attend international conferences like GDC or PyCon.
+\end{itemize}
 
 \section{Conclusion}
-This is the conclusion section.
+By aligning personal goals with industry trends, this roadmap provides a clear pathway to future success in IT, particularly in game development and backend engineering.
 
 \end{document}
